# misis2023f-23-03-serdeshnow-v-s

./: .gitignore  CMakeLists.txt  codeforces.id  status.md
CMakeOne/: CMakeLists.txt  CMakeOne.cpp  CMakeOne.h
prj.codeforces/: 0001a.cpp  0004a.cpp  0071a.cpp  0155a.cpp  0158a.cpp  0231a.cpp  0263a.cpp  0271a.cpp  0617a  0617a.cpp  0731a.cpp  0915a.cpp  0935b.cpp  0978a.cpp  0978b.cpp  1352a.cpp  1512a.cpp  1512b.cpp  1532a.cpp  1559a.cpp  1559a_v1.cpp  1585A.cpp  1585a.cpp  1692a.cpp  1692b.cpp  1692b_v1.cpp  1692c.cpp  1721b  1721b.cpp  1734b.cpp  1742a.cpp  1742b.cpp  1850a.cpp  1850b.cpp  1850c.cpp  1872a.cpp  1873c.cpp  CMakeLists.txt  No_same_values.cpp  Tests.cpp  (+1 more)
prj.lab/: CMakeLists.txt  complex.cpp  complex.h  stable_complex.cpp  test_complex.cpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.h
prj.lab/dynarr/: dynarr.cpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.h
prj.test/: CMakeLists.txt  doctest.h  test_complex.cpp  test_rational.cpp
