add_executable(0004a 0004a.cpp)
add_executable(0001a 0001a.cpp)
add_executable(0155a 0155a.cpp)
add_executable(0231a 0231a.cpp)
add_executable(0271a 0271a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0731a 0731a.cpp)
add_executable(0935b 0935b.cpp)
add_executable(0978a 0978a.cpp)
add_executable(0978b 0978b.cpp)
add_executable(1352a 1352a.cpp)
add_executable(1512a 1512a.cpp)
add_executable(1585a 1585a.cpp)
add_executable(1692c 1692c.cpp)
add_executable(1721b 1721b.cpp)
add_executable(1734b 1734b.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1872a 1872a.cpp)
add_executable(1873c 1873c.cpp)
add_executable(0263a 0263a.cpp)
add_executable(0915a 0915a.cpp)
